--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "d3": "^7.8.5"
+    "d3": "^7.9.0"
   }
 }
